<resources>
    <string name="app_name">onTimeApp</string>
    <string name="register_sign">Register Sign</string>
    <string name="booking_desk">Booking Desk</string>
    <string name="list_my_sings">List my Sings</string>
    <string name="list_signs_of_department">List signs of department</string>
    <string name="enter_your_user">Enter your User</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter">Enter</string>
    <string name="sign">Sign</string>
    <string name="out">OUT</string>
    <string name="in">IN</string>
    <string name="holidays">Holidays</string>
    <string name="medical">Medical</string>
    <string name="personal_issues">Personal Issues</string>
    <string name="select_option_in_case_of_signing_in_with_incident">Select option in case of signing in with incident</string>
    <string name="start_your_job_at">Start your job at:</string>
    <string name="finish_your_job_at">Finish your job at:</string>
    <string name="homework">HOMEWORK</string>
    <string name="office">OFFICE</string>
    <string name="select_modality">Select Modality</string>
    <string name="officeBD">OFFICE</string>
    <string name="homeworkBD">HOMEWORK</string>
    <string name="select_modalityBD">Select Modality</string>
    <string name="assign_a_modality_for_register_you_sign">Assign a modality for register you sign</string>
    <string name="select_office_or_homework">Select Office or HomeWork</string>
    <string name="accept">Accept</string>
    <string name="sign_with_incidence">Sign with Incidence</string>
    <string name="do_you_want_to_register_a_incidence_in_your_sign">Do you want to register a incidence in your sign?</string>
    <string name="holidaysbd">HOLIDAYS</string>
    <string name="medicalbd">MEDICAL</string>
    <string name="personalbd">PERSONAL</string>
    <string name="sign_register_ok_to">"Sign register OK to "</string>
    <string name="exit">EXIT:</string>
    <string name="entrace">ENTRACE:</string>
    <string name="list_all_signs">List All Signs</string>
    <string name="not_found_data_in_this_day">"Not Found data in this day "</string>
    <string name="select_day_to_search">Select day to search</string>
    <string name="there_is_no_data_for_the_selected_date">There is no data for the selected date.</string>
    <string name="you_don_t_have_an_department">You don\'t have an department</string>
    <string name="contact_with_administration_depatment">Contact with Administration for that assign an department</string>
    <string name="date">DATE:</string>
    <string name="select_incidence">Select Incidence</string>
    <string name="search_by_date">Search by Date</string>
    <string name="search_by">"Search by: "</string>
    <string name="in_case_of_no_data_delete_filters_and_search_again">in case of no data delete filters and search again</string>
    <string name="delete_sign">Delete Sign</string>
    <string name="yes">YES</string>
    <string name="not">NOT</string>
    <string name="delete_select_sign">Delete select Sign</string>
    <string name="the_sign_dated">"The sign dated "</string>
    <string name="will_be_deleted">" will be deleted."</string>
    <string name="modality">MODALITY</string>
    <string name="you_must_select_a_modality_in_order_to_register_your_sign">You must select a modality in order to register your sign</string>
    <string name="in_day">" in day: "</string>
    <string name="sign_register">Sign Register</string>
    <string name="back">Back</string>
    <string name="there_is_no_record_of_a_signing_yesterday">There is no record of a signing yesterday</string>
    <string name="no_signing">No signing</string>
    <string name="new_password">New Password</string>
    <string name="personal_data">Personal Data</string>
    <string name="you_can_select_a_modality_in_your_preferences_of_sign">You can select a modality in your preferences of sign</string>
    <string name="you_aren_t_assigned_a_preferred_modality">You aren´t assigned a preferred modality</string>
    <string name="actual_hours">Actual Hours:</string>
    <string name="password_update_correct">Password update correct</string>
    <string name="sign_deleted_correctly">Sign deleted correctly</string>
    <string name="error_to_deleted_sing">Error to deleted sing</string>
    <string name="error_to_register_sign">Error to register Sign</string>
    <string name="out_sign_register_correct">Out Sign register correct</string>
    <string name="out_sign_correct">Out sign register correct</string>
    <string name="schedule">Schedule</string>
    <string name="select_day_to_register">Select Day to Register</string>
    <string name="register_late_day">Register Late Day</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="clean_filters">clean filters</string>
    <string name="last_seven">Last Seven</string>
    <string name="my_list_signs">My List Signs</string>
    <string name="sign_in_late_day">Sign in late day</string>
</resources>