<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/fondoMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fmenu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btRegisterSing"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#4DFFBB33"
                android:text="@string/register_sign"
                android:textColor="#0B0B0B"
                android:textSize="24sp"
                app:icon="@drawable/baseline_filter_1_24"
                app:iconSize="30dp"
                app:iconTint="#151414"
                tools:ignore="MissingConstraints" />

        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btBookingDesk"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#4DFFBB33"
                android:text="@string/booking_desk"
                android:textColor="#0B0B0B"
                android:textSize="24sp"
                app:icon="@drawable/baseline_filter_1_24"
                app:iconSize="30dp"
                app:iconTint="#151414"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btListMySign"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#4DFFBB33"
                android:text="@string/list_my_sings"
                android:textColor="#0B0B0B"
                android:textSize="24sp"
                app:icon="@drawable/baseline_filter_1_24"
                app:iconSize="30dp"
                app:iconTint="#151414"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btListSignsDepartment"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#4DFFBB33"
                android:text="@string/list_signs_of_department"
                android:textColor="#0B0B0B"
                android:textSize="24sp"
                app:icon="@drawable/baseline_filter_1_24"
                app:iconSize="30dp"
                app:iconTint="#151414"
                tools:ignore="MissingConstraints" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="164dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>