<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/AliceBlue"
        app:cardCornerRadius="@dimen/mapbox_internalMinSpan24"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <!-- Title, secondary and supporting text -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_card_textdateuser"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/date"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/tv_card_date_user"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@color/black"
                            android:text="2023-11-22"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFC107" />

                        <TextView
                            android:id="@+id/tv_card_modality_user"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/style_borde_textview"
                            android:text="@string/select_modality"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_card_textinuser"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/entrace"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/tv_card_in_user"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@color/DarkGreen"
                            android:text="00:00:00"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFC107" />

                        <TextView
                            android:id="@+id/tv_card_incidence_in_user"
                            android:layout_width="209dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/select_incidence"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_card_textoutuser"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/exit"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/tv_card_out_user"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@color/Brown"
                            android:text="00:00:00"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFCA28" />

                        <TextView
                            android:id="@+id/tv_card_incidence_out_user"
                            android:layout_width="209dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/select_incidence"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?android:attr/textColorSecondary" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_card_details_user"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Details" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>