<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignPreference">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fmenu" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="217dp"
        android:layout_height="224dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPhotoPreferences"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:paddingTop="1dp"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeColor="@color/DarkGoldenrod"
            app:strokeWidth="5dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="177dp"
        android:layout_height="221dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btChangePass"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="174dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="Change Password"
            android:textColor="@color/DarkGoldenrod" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassPreferences"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:visibility="visible"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btSavePass"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="Save Password"
            android:textColor="@color/DarkGoldenrod"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="283dp"
        android:layout_height="264dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/datos"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="82dp"
            android:background="@drawable/style_borde_textview"
            android:backgroundTint="@color/AliceBlue"
            android:text="@string/personal_data"
            android:textAlignment="center"
            android:textColor="@color/Black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamePreference"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_borde_textview"
                android:backgroundTint="@color/AliceBlue"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSurnamePreferences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/style_borde_textview"
                android:backgroundTint="@color/AliceBlue"
                android:textAlignment="center"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/tvDepartmentPreferences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/style_borde_textview"
                android:backgroundTint="@color/AliceBlue"
                android:textAlignment="center"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/tvModalityPreferences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/style_borde_textview"
                android:backgroundTint="@color/AliceBlue"
                android:textAlignment="center"
                android:textColor="@color/Black" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutIncidence"
        android:layout_width="229dp"
        android:layout_height="118dp"
        android:layout_marginStart="88dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <View
            android:id="@+id/viewIncidence"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/DarkGoldenrod"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewIncidence"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_can_select_a_modality_in_your_preferences_of_sign"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/preference_spinner"
                style="@android:style/Widget.Spinner.DropDown"
                android:layout_width="176dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btSavePreferences"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="savePreferences"
                app:icon="@drawable/baseline_save_24" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>